--- a/wip/hearsay/hearsay/Base.lproj/Main.storyboard
+++ b/wip/hearsay/hearsay/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -76,7 +77,11 @@
                         </connections>
                     </tableView>
                     <toolbarItems>
-                        <barButtonItem systemItem="refresh" id="GeC-2Q-eBe"/>
+                        <barButtonItem systemItem="refresh" id="GeC-2Q-eBe">
+                            <connections>
+                                <action selector="refreshButton:" destination="C2L-Ts-mqC" id="5We-PV-542"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="u7K-ps-djj"/>
                         <barButtonItem systemItem="compose" id="jhk-BE-vdL">
                             <connections>
@@ -646,7 +651,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Y1h-41-eu4"/>
         <segue reference="9QJ-u7-fJh"/>
         <segue reference="Imj-05-eZS"/>
         <segue reference="AWt-Ki-wbA"/>
